[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Dreams/Good_Dreams.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GoodDreams/GoodDreams.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GoodDreams/GoodDreams.tres" type="Material" id=3]
[ext_resource path="res://SoundEffects/Perry_SEs_ParryHit.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 95 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 95 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 95 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 95 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 53.2499

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[node name="GoodDreams" type="AnimatedSprite"]
modulate = Color( 1.2, 1.1, 1.2, 1 )
frames = SubResource( 5 )
frame = 1
playing = true
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 264

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 1, 0.45098, 1 )
position = Vector2( 0, 5.21274 )
z_index = -1
shape = SubResource( 6 )

[node name="HitTween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 7 )
amount = 24
lifetime = 4.0
local_coords = false
process_material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="DeathTween" type="Tween" parent="."]

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 3.0
bus = "SoundEffects"

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="tween_all_completed" from="DeathTween" to="." method="_on_DeathTween_tween_all_completed"]
